--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -319,6 +319,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
