--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -187,6 +187,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410180003066_Init database.cs" />
+    <Compile Include="Migrations\201410180003066_Init database.Designer.cs">
+      <DependentUpon>201410180003066_Init database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -196,6 +201,7 @@
     <Compile Include="Models\PriceMoment.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BookingRepository.cs" />
     <Compile Include="Repositories\IFindAllRepository.cs" />
     <Compile Include="Repositories\IDeleteRepository.cs" />
     <Compile Include="Repositories\IBookingRepository.cs" />
@@ -203,6 +209,7 @@
     <Compile Include="Repositories\IUpdateRepository.cs" />
     <Compile Include="Repositories\ICreateRepository.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
+    <Compile Include="ViewModels\RoomModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -261,7 +268,6 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -319,7 +325,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -329,6 +334,11 @@
       <Project>{d9259232-69e0-4872-aa4f-e28333a0ac3e}</Project>
       <Name>Confidential-Eternal-Pottery.DomainModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201410180003066_Init database.resx">
+      <DependentUpon>201410180003066_Init database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
