--- a/Confidential-Eternal-Pottery/Web.config
+++ b/Confidential-Eternal-Pottery/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="HotelContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=hotel;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="HotelContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Hotel;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
