Added PriceMoment Create and Delete

--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DBSet.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PriceMomentController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -331,6 +332,8 @@
     <Content Include="Views\Room\Index.cshtml" />
     <Content Include="Views\Room\Update.cshtml" />
     <Content Include="Views\Room\Create.cshtml" />
+    <Content Include="Views\PriceMoment\Index.cshtml" />
+    <Content Include="Views\PriceMoment\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
