--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -191,6 +191,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410191629168_update-database.cs" />
+    <Compile Include="Migrations\201410191629168_update-database.Designer.cs">
+      <DependentUpon>201410191629168_update-database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -326,11 +331,13 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Booking\Index.cshtml" />
-    <Content Include="Views\Booking\View.cshtml" />
+    <Content Include="Views\Booking\ViewBooking.cshtml" />
     <Content Include="Views\Booking\Edit.cshtml" />
     <Content Include="Views\Booking\Delete.cshtml" />
     <Content Include="Views\Booking\SetDate.cshtml" />
     <Content Include="Views\Booking\AddGuests.cshtml" />
+    <Content Include="Views\Booking\AddGuest.cshtml" />
+    <Content Include="Views\Booking\Confirm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -343,6 +350,11 @@
       <Project>{d9259232-69e0-4872-aa4f-e28333a0ac3e}</Project>
       <Name>Confidential-Eternal-Pottery.DomainModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201410191629168_update-database.resx">
+      <DependentUpon>201410191629168_update-database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
