--- a/Confidential-Eternal-Pottery/Web.config
+++ b/Confidential-Eternal-Pottery/Web.config
@@ -34,6 +34,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="ConfidentialEternalPottery.DomainModel.Models" />
       </namespaces>
     </pages>
   </system.web>
