--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -196,7 +196,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BookingRepository.cs" />
     <Compile Include="Repositories\PriceMomentRepository.cs" />
-    <Compile Include="Repositories\RoomRepository.cs" />    <Compile Include="ViewModels\CreatePriceMoment.cs" />
+    <Compile Include="Repositories\RoomRepository.cs" />
+    <Compile Include="ViewModels\CreatePriceMoment.cs" />
     <Compile Include="ViewModels\CreateRoom.cs" />
     <Compile Include="ViewModels\AddressModel.cs" />
     <Compile Include="ViewModels\CreateBooking.cs" />
@@ -336,11 +337,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201410180003066_Init database.resx">
-      <DependentUpon>201410180003066_Init database.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Confidential-Eternal-Pottery.DomainModel\Confidential-Eternal-Pottery.DomainModel.csproj">
