--- a/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
+++ b/Confidential-Eternal-Pottery/Confidential-Eternal-Pottery.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GuestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PriceMomentController.cs" />
     <Compile Include="Controllers\BookingController.cs" />
@@ -196,6 +197,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BookingRepository.cs" />
     <Compile Include="Repositories\PriceMomentRepository.cs" />
+    <Compile Include="Repositories\GuestRepository.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
     <Compile Include="ViewModels\CreatePriceMoment.cs" />
     <Compile Include="ViewModels\CreateRoom.cs" />
@@ -333,6 +335,8 @@
     <Content Include="Views\Booking\AddGuest.cshtml" />
     <Content Include="Views\Booking\Confirm.cshtml" />
     <Content Include="Views\Booking\Overview.cshtml" />
+    <Content Include="Views\Booking\GuestsForBooking.cshtml" />
+    <Content Include="Views\Guest\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
